// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<i
  aria-hidden="true"
  className="Icon-root Icon-sm coral coral-icon"
>
  face
</i>
`;

exports[`renders correctly with specified size 1`] = `
<i
  aria-hidden="true"
  className="Icon-root Icon-lg coral coral-icon"
>
  bookmark
</i>
`;
